# walkcode

./: .env.example  .gitignore  .pytest_report.json  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  README_CN.md  README_EN.md  TESTING.md  TESTING_QUICKSTART.md  install.sh  pyproject.toml  release.sh  test_results.json  uninstall.sh  upgrade.sh
.claude/skills/walkcode-release/: SKILL.md
.github/workflows/: regression-tests.yml
.review/: 2026-06-13-inject-single-char-submit-review.md  2026-06-15-inject-delivery-fix-review.md  2026-06-17-perm-card-invalidation-review.md  2026-06-19-feishu-partial-forward-review.md
docs/review/: 2026-06-23-session-health-card-code-review.md  2026-06-23-session-health-card-review.md
scripts/: run_tests.py
src/agent_hotline/: __main__.py  config.py  server.py  state.py  tty.py
src/cbuddy/: __main__.py  config.py  server.py  state.py  tty.py
src/walkcode/: __init__.py  __main__.py  agent.py  config.py  i18n.py  permreg.py  server.py  state.py  stats.py  summarizer.py  tty.py
tests/: test_askuser_card.py  test_askuserquestion_feishu.py  test_build_start_cmd.py  test_card_action.py  test_codex_hooks_feature.py  test_double_instance.py  test_e2e.py  test_e2e_feishu_playwright.py  test_e2e_playwright.py  test_health_card.py  test_hook_dedupe.py  test_inject_confirm.py  test_input_box.py  test_message_dispatch.py  test_owner_gate.py  test_perm_dedupe.py  test_perm_registry.py  test_permission_card.py  test_probe_liveness.py  test_release_scripts.py  test_server.py  test_state.py  test_state_tty_eviction.py  test_stats.py  test_stop_hook.py  test_stuck_and_evict.py  test_summarizer.py  test_tty.py  test_tty_inject.py  test_upgrade.py  test_verify_submitted.py  test_wait_ready.py
