[project]
name = "walkcode"
version = "0.7.0"
description = "Let your AI agent call you when it needs help — human-in-the-loop via Feishu"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "0x5446"}]
keywords = ["claude-code", "agent", "human-in-the-loop", "feishu", "lark", "terminal", "remote"]
classifiers = [
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "lark-oapi>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/0x5446/walkcode"

[project.scripts]
walkcode = "walkcode.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/walkcode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
